--- a/requirements_versions.txt
+++ b/requirements_versions.txt
@@ -8,7 +8,7 @@ diskcache==5.6.3
 einops==0.4.1
 facexlib==0.3.0
 fastapi==0.104.1
-gradio==3.41.2
+gradio==4.40.0
 httpcore==0.15
 inflection==0.5.1
 jsonmerge==1.8.0
@@ -34,6 +34,8 @@ transformers==4.46.1
 httpx==0.24.1
 pillow-avif-plugin==1.4.3
 diffusers==0.31.0
+gradio_rangeslider==0.0.6
+gradio_imageslider==0.0.20
 loadimg==0.1.2
 tqdm==4.66.1
 peft==0.13.2
