--- a/requirements_versions.txt
+++ b/requirements_versions.txt
@@ -1,25 +1,25 @@
-blendmodes==2022
-clean-fid==0.1.35
-diskcache==5.6.3
-facexlib==0.3.0
-fastapi==0.104.1
-gradio==4.40.0
-inflection==0.5.1
-jsonmerge==1.8.0
-kornia==0.6.7
-lark==1.1.2
-open-clip-torch==2.20.0
-piexif==1.1.3
-psutil==5.9.5
-pytorch_lightning==1.9.4
-resize-right==0.0.2
-spandrel==0.3.4
-spandrel-extra-arches==0.1.1
-tomesd==0.1.3
+blendmodes
+clean-fid
+diskcache
+facexlib
+fastapi
+gradio
+inflection
+jsonmerge
+kornia
+lark
+open-clip-torch
+piexif
+psutil
+pytorch_lightning
+resize-right
+spandrel
+spandrel-extra-arches
+tomesd
 torch
-torchdiffeq==0.2.3
-torchsde==0.2.6
-pillow-avif-plugin==1.4.3
-gradio_rangeslider==0.0.6
-gradio_imageslider==0.0.20
-loadimg==0.1.2
+torchdiffeq
+torchsde
+pillow-avif-plugin
+gradio_rangeslider
+gradio_imageslider
+loadimg
